# plnaloga

./: NALOGA2.md  README.md  pyproject.toml  requirements.txt
data/: scale.com.json  webflow.com.json  www.11x.ai.json
src/: config.py  main.py  ml.py  utils.py
